feat: up and running agin ;)